--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 5%;
+  box-sizing: border-box;
   font-family: 'Courier New', Courier, monospace;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
